# ethos-lua-definitions

./: .gitignore  README.md  config.json  doxy-analysis.md  llms.txt  pyproject.toml
.github/workflows/: publish.yml
tools/: generate_luals_definitions.py
